# envelope-decay-fit

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  PACKAGE_SUMMARY.md  README.md  main.py  monkey_testing.md  pyproject.toml  pytest.ini  verify_package.sh  wut.txt
data/envelope_exports/free_plate_A1H3/: hit_001.csv  hit_002.csv  hit_003.csv  hit_004.csv  hit_005.csv  hit_006.csv  hit_007.csv  hit_008.csv  hit_009.csv  hit_010.csv  hit_011.csv  hit_012.csv  hit_013.csv
data/envelope_exports/free_plate_A2H4/: hit_001.csv  hit_002.csv  hit_003.csv  hit_004.csv  hit_005.csv  hit_006.csv  hit_007.csv  hit_008.csv  hit_009.csv  hit_010.csv  hit_011.csv  hit_012.csv
data/envelope_exports/free_plate_A3H1/: hit_001.csv  (+11 more)
docs/: code_style.md  handoff_260202_2.md  handoff_260202_4.md  handoff_260203_1.md  handoff_260209_1.md  handoff_260210_1.md  handoff_260211_1.md  implementation.md  release_v0.2.0.md  release_v0.2.1.md
docs/old_handoffs/: handoff_20260202_envelope_decay_plot_debug.md  handoff_260202_5.md  handoff_260202_6.md  handoff_260202_7.md
examples/: .~lock.manual_ui_check_2.png#  manual_ui_check.py  manual_ui_check_auto.py  quickstart.py  tx_span_measurement.json  tx_span_ui_check.plot.json  tx_span_ui_check.plot.md  tx_span_ui_check.py  tx_span_ui_check_auto.py
scripts/: run_all_examples.py  test_all_datasets.py  test_windows.py
src/envelope_decay_fit/: __init__.py  api.py  breakpoint.py  cli.py  flags.py  manual_segmentation.py  models.py  plots.py  result.py  windows.py
tests/: conftest.py  test_basic.py  test_imports.py  test_manual_ui.py  test_plotting_api.py  test_tx_span_ui.py
validation/: README.md  bench_fitters.py  bench_windows.py  review_all_datasets.py  review_runner.py
(+115 files in other folders)
