[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "envelope-decay-fit"
version = "0.1.0"
description = "Piecewise exponential decay fitting for time-domain response envelopes with damping ratio extraction"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Pierre Lacerte", email = "placerte@opsun.com"},
]
keywords = [
    "signal-processing",
    "exponential-decay",
    "damping-ratio",
    "modal-analysis",
    "structural-dynamics",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "produm>=0.1.2",
    "mpl-plot-report>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pandas>=3.0",
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
env-decay-fit = "envelope_decay_fit.cli:main"

[project.urls]
Homepage = "https://github.com/placerte/envelope-decay-fit"
Repository = "https://github.com/placerte/envelope-decay-fit"
Issues = "https://github.com/placerte/envelope-decay-fit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/envelope_decay_fit"]

[tool.hatch.build.targets.sdist]
exclude = [
    "data/",
    "examples/",
    "scripts/",
    "validation/",
    "out/",
    ".git*",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
